--- a/linhnguyen-ver2/package.json
+++ b/linhnguyen-ver2/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "gridsome": "^0.7.0",
-    "vue-page-transition": "^0.2.2"
+    "vue-page-transition": "^0.2.2",
+    "vue-pdf": "^4.0.8"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
