--- a/linhnguyen-ver2/package.json
+++ b/linhnguyen-ver2/package.json
@@ -10,7 +10,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "gridsome": "^0.7.0",
     "vue-page-transition": "^0.2.2",
-    "vue-pdf": "^4.0.8"
+    "vue-pdf": "^4.0.8",
+    "vue2-smooth-scroll": "^1.3.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
